# Sweggist

./: .breakpoints  main.py  mainbank.db  pyproject.toml  tdq.json
